Add MQTT backed nightlight functionality

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,6 +39,7 @@
       <nav style="margin-left:auto;">
         <a href="{{ url_for('index') }}">Now Playing</a>
         <a href="{{ url_for('display_page') }}">Display</a>
+        <a href="{{ url_for('lighting_page') }}">Lighting</a>
         <a href="{{ url_for('spotify_config') }}">Spotify</a>
         <a href="{{ url_for('audiobooks_page') }}">Audiobooks</a>
         <a href="{{ url_for('mappings') }}">Mappings</a>
